# self-ershov-memory

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  __init__.py  after-install.md  brief.md  plugin.yaml  pyproject.toml
.clusterfuzzlite/: Dockerfile  build.sh
.github/: dependabot.yml  social-preview-prompt.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: cflite_pr.yml  ci.yml  codeql.yml  publish.yml  release.yml  scorecard.yml
docs/: before-after-approval.md  install-update.md  onboarding.md  operator-digest-format.md  quickstart.md  release-checklist.md  release-handoff-v0.2.0.md  release-handoff-v0.3.0.md  release-handoff-v0.4.0.md  release-integrity.md  release-notes-v0.2.0.md  release-notes-v0.4.0.md  safety.md  stop-and-research-rule.md  testing.md
fuzzers/: __init__.py  ershov_safety_fuzzer.py
reviews/: final-sanity.md
scripts/: generate_release_checksums.py  generate_release_manifest.py  generate_release_sbom.py  hermes_plugin_smoke.py  self-audit.py  verify_release_artifacts.py
skills/hermes-dreaming/: SKILL.md
skills/hermes-ershov/: SKILL.md
specs/: mvp-implementation-plan.md  v0.4.0-plan.md
src/hermes_dreaming/: __init__.py  apply.py  cli.py  diffing.py  policy.py  providers.py  session_reader.py
src/hermes_dreaming/commands/: digest.py  install_cron.py  install_systemd.py  nightly.py  soak.py  status.py  update.py
src/hermes_dreaming/tools/: apply_memory_op.py
src/self_ershov_memory/: __init__.py  analyzer.py  audit.py  cleaner.py  context.py  db.py  memory_store.py  runner.py  skills.py
tests/: test_apply.py  test_ci_matrix.py  test_cli.py  test_fuzz_harness.py  test_inbox.py  test_install_systemd.py  test_nightly.py  test_plugin_registration.py  test_providers.py  test_release_artifacts.py  test_release_checksums.py  test_release_docs.py  test_release_manifest.py  test_release_sbom.py  test_release_workflow.py  test_revert.py  test_review_compact_cron.py  test_root_plugin.py  test_self_ershov_memory_audit.py  test_session_reader.py  test_smoke.py  test_soak.py  test_status.py  test_update_command.py  test_validation.py
