[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "hermes-ershov"
version = "0.4.0"
description = "Staged nightly memory engine for Hermes operators"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
authors = [
  {name = "Niko"},
]
keywords = ["hermes", "memory", "agents", "llm", "cli", "ai"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "hypothesis>=6.100",
  "build>=1.2",
  "twine>=6.0",
  "pip-audit>=2.10",
  "zizmor>=1.25",
]
llm = [
  "openai>=1.30.0",
]

[project.scripts]
ershov = "hermes_dreaming.cli:main"
hermes-ershov = "hermes_dreaming.cli:main"
mnemos = "hermes_dreaming.cli:main"
nightmem = "hermes_dreaming.cli:main"
dreaming = "hermes_dreaming.cli:main"

[project.urls]
Homepage = "https://github.com/ersh123/hermes-ershov"
Repository = "https://github.com/ersh123/hermes-ershov"
Issues = "https://github.com/ersh123/hermes-ershov/issues"
Security = "https://github.com/ersh123/hermes-ershov/security/advisories/new"

[tool.hatch.build.targets.wheel]
packages = ["src/hermes_dreaming", "src/hermes_ershov", "src/hermes_mnemos"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
